--- a/LightMQ/LightMQ/LightMQ.csproj
+++ b/LightMQ/LightMQ/LightMQ.csproj
@@ -1,9 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
+        <LangVersion>11.0</LangVersion>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Version>0.1.0</Version>
+        <Title>LightMQ</Title>
+        <Authors>lizhenghao</Authors>
+        <PackageProjectUrl>https://github.com/li-zheng-hao/LightMQ</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/li-zheng-hao/LightMQ</RepositoryUrl>
+        <Description>基于数据库的消息队列</Description>
+        <PackageIcon>icon.png</PackageIcon>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0"/>
@@ -12,7 +24,11 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="Consumer\" />
+      <None Include="..\..\icon.png">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+        <Link>icon.png</Link>
+      </None>
     </ItemGroup>
 
 </Project>
