--- a/LightMQ/LightMQ.Storage.MongoDB/LightMQ.Storage.MongoDB.csproj
+++ b/LightMQ/LightMQ.Storage.MongoDB/LightMQ.Storage.MongoDB.csproj
@@ -8,7 +8,7 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IncludeSymbols>true</IncludeSymbols>
-        <Version>0.3.0</Version>
+        <Version>1.0.0-preview2</Version>
         <Title>LightMQ.Storage.MongoDB</Title>
         <Authors>lizhenghao</Authors>
         <PackageProjectUrl>https://github.com/li-zheng-hao/LightMQ</PackageProjectUrl>
