--- a/LightMQ/LightMQ.Storage.SqlServer/LightMQ.Storage.SqlServer.csproj
+++ b/LightMQ/LightMQ.Storage.SqlServer/LightMQ.Storage.SqlServer.csproj
@@ -8,7 +8,7 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IncludeSymbols>true</IncludeSymbols>
-        <Version>1.0.0-preview4</Version>
+        <Version>1.0.0</Version>
         <Title>LightMQ.Storage.SqlServer</Title>
         <Authors>lizhenghao</Authors>
         <PackageProjectUrl>https://github.com/li-zheng-hao/LightMQ</PackageProjectUrl>
