--- a/LightMQ/LightMQ.WebApiSample/LightMQ.WebApiSample.csproj
+++ b/LightMQ/LightMQ.WebApiSample/LightMQ.WebApiSample.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10"/>
+        <PackageReference Include="OpenTelemetry" Version="1.9.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
