--- a/LightMQ/LightMQ.OpenTelemetry/LightMQ.OpenTelemetry.csproj
+++ b/LightMQ/LightMQ.OpenTelemetry/LightMQ.OpenTelemetry.csproj
@@ -3,7 +3,18 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <TargetFrameworks>net8.0;net6.0;net7.0</TargetFrameworks>
+        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <LangVersion>11.0</LangVersion>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <IncludeSymbols>true</IncludeSymbols>
+        <Version>1.1.0</Version>
+        <Title>LightMQ.OpenTelemetry</Title>
+        <Authors>lizhenghao</Authors>
+        <PackageProjectUrl>https://github.com/li-zheng-hao/LightMQ</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/li-zheng-hao/LightMQ</RepositoryUrl>
+        <Description>基于数据库的消息队列</Description>
+        <PackageIcon>icon.png</PackageIcon>
     </PropertyGroup>
 
     <ItemGroup>
