--- a/LightMQ/LightMQ.OpenTelemetry/LightMQ.OpenTelemetry.csproj
+++ b/LightMQ/LightMQ.OpenTelemetry/LightMQ.OpenTelemetry.csproj
@@ -25,4 +25,12 @@
       <ProjectReference Include="..\LightMQ\LightMQ.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="..\..\icon.png">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+        <Link>icon.png</Link>
+      </None>
+    </ItemGroup>
+
 </Project>
