--- a/LightMQ/LightMQ/LightMQ.csproj
+++ b/LightMQ/LightMQ/LightMQ.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <LangVersion>11.0</LangVersion>
+        <LangVersion>latestmajor</LangVersion>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IncludeSymbols>true</IncludeSymbols>
@@ -14,7 +14,7 @@
         <RepositoryUrl>https://github.com/li-zheng-hao/LightMQ</RepositoryUrl>
         <Description>基于数据库的消息队列</Description>
         <PackageIcon>icon.png</PackageIcon>
-        <TargetFrameworks>net8.0;net6.0;net7.0</TargetFrameworks>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0"/>
