--- a/src/LightMQ.Storage.SqlServer/LightMQ.Storage.SqlServer.csproj
+++ b/src/LightMQ.Storage.SqlServer/LightMQ.Storage.SqlServer.csproj
@@ -7,7 +7,7 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IncludeSymbols>true</IncludeSymbols>
-        <Version>2.0.3</Version>
+        <Version>2.1.0-preview</Version>
         <Title>LightMQ.Storage.SqlServer</Title>
         <Authors>lizhenghao</Authors>
         <PackageProjectUrl>https://github.com/li-zheng-hao/LightMQ</PackageProjectUrl>
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Dapper" Version="2.1.15" />
+      <PackageReference Include="Dapper" Version="2.1.35" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     </ItemGroup>
 
